samples/_failures_safe/1761423519_4b52f8_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_e4abdb3c.c: In function ‘main’:
./samples/SAFE/__tmp_e4abdb3c.c:127:19: error: expected ‘;’ at end of input
  127 |             printf
      |                   ^
      |                   ;
./samples/SAFE/__tmp_e4abdb3c.c:127:13: error: expected declaration or statement at end of input
  127 |             printf
      |             ^~~~~~
./samples/SAFE/__tmp_e4abdb3c.c:127:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_e4abdb3c.c:127:13: error: expected declaration or statement at end of input
